# Research

./: .gitignore  Makefile  README.md  config.yaml  errors.md  output.txt  pyproject.toml  requirements.txt  run_pipeline.py  test_import.py  test_output.txt  test_parser_part2.py
cbf_data/: README.md  __init__.py  adapter.py  loader.py  metadata.py
core/: README.md  __init__.py  config.py  config_loader.py  logging_config.py  schema.py  types.py
data/: README.md  __init__.py  counterfactual_evidence.py  minimality_result.py  semantic_result.py  simulation_trace.py
examples/: README.md  __init__.py  minimality_examples.py  paper_examples.py  semantic_examples.py
grammar/: README.md  rules.lark
minimality/: README.md  __init__.py  bound_analyzer.py  change_extractor.py  justification_checker.py  minimality_scorer.py  minimality_validator.py
output/unicycle_dynamic_obstacle/robust_evolved/: candidate_rules.csv  inconsistency_examples_DT_DNF_d2_fail.csv  inconsistency_examples_DT_DNF_d3_fail.csv  inconsistency_examples_DT_DNF_d4_fail.csv  inconsistency_examples_DT_DNF_d5_fail.csv  inconsistency_examples_DT_DNF_dX_fail.csv  inconsistency_examples_RF_DNF_t17_fail.csv  inconsistency_examples_RF_DNF_t28_fail.csv  inconsistency_examples_RF_DNF_t58_fail.csv  inconsistency_examples_RF_DNF_t79_fail.csv  inconsistency_examples_RF_DNF_t86_fail.csv  inference_report.txt  rule_evaluations.csv  selected_rules.csv  selection_report.txt  system_metadata.txt
output/unicycle_dynamic_obstacle/robust_vanilla/: candidate_rules.csv  inconsistency_examples_DT_DNF_d2_fail.csv  inconsistency_examples_DT_DNF_d3_fail.csv  inconsistency_examples_DT_DNF_d4_fail.csv  (+11 more)
parsers/: README.md  __init__.py  lark_parser.py
rule_inference/: README.md  __init__.py  forest_extractor.py  grammar_checker.py  rule_export.py  tree_extractor.py
rule_validation/: README.md  __init__.py  counterfactual_hints.py  rule_evaluator.py  rule_selector.py  validation_report.py
semantic/: README.md  __init__.py  consistency_checker.py  contradiction_checker.py  counterfactual_generator.py  overfitting_detector.py  semantic_validator.py
shared/: README.md  __init__.py  grammar_validation.py
tests/: README.md  __init__.py  test_bound_analyzer.py  test_cbf_data.py  test_change_extractor.py  test_config_and_logging.py  test_core.py  test_data_layer.py  test_grammar_validation.py  test_justification_checker.py  test_minimality_examples.py  test_minimality_scorer.py  test_minimality_validator.py  test_parser.py  test_rule_inference.py  test_rule_validation.py  test_semantic.py  test_validators.py
validators/: README.md  __init__.py  absolute_bounds.py  base.py  preparse.py  statistics.py  structure.py
(+45 files in other folders)
